# whiteboard

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  run.sh
server/: Dockerfile  pyproject.toml
server/bank/: agent-generator-prompt.md  complexity.py  correctness.py  generate.py  generator.py  ingest.py  schemas.py  sd_schemas.py  sd_validator.py  validate.py  validator.py
server/eval/: agent-evaluator-prompt.md  agent-evaluator-sd-prompt.md  cases.yaml  run_eval.py  run_sd_eval.py  sd_cases.yaml
server/tests/: conftest.py  test_backend_parity.py  test_bank_complexity.py  test_bank_correctness.py  test_bank_generator.py  test_bank_ingest.py  test_bank_schemas.py  test_bank_validator.py  test_db.py  test_db_migration_sd.py  test_errors.py  test_errors_not_supported_for_sd.py  test_errors_wrong_question_type.py  test_evaluator.py  test_evaluator_backend.py  test_ingest_cli.py  test_ingest_sd.py  test_recommend.py  test_sd_curated_round_trip.py  test_sd_eval_harness.py  test_sd_evaluator_unit.py  test_sd_schemas.py  test_sd_validator.py  test_seed_loader.py  test_server_bootstrap_walks_sd_curated.py  test_tool_evaluate_attempt.py  test_tool_evaluate_sd_attempt.py  test_tool_get_hint.py  test_tool_get_hint_sd_rejection.py  test_tool_get_next_question.py  test_tool_get_next_question_type_filter.py  test_tool_get_roadmap.py  test_tool_get_roadmap_sd.py  test_tool_get_session.py  test_tool_get_session_sd.py  test_tool_get_weakness_profile.py  test_tool_record_outcome.py  test_topic_seed_loader.py  test_validate_cli.py
(+98 files in other folders)
